--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
       <div class="prog-holder">
         <h4>HTML &amp;CSS</h4>
         <div class="prog">
-          <span style="width: 85%;" data-progress="90%"></span>
+          <span style="width: 85%;" data-progress="85%"></span>
         </div>
       </div>
       <div class="prog-holder">
         <h4>JAVASCRIPT</h4>
         <div class="prog">
-          <span style="width: 80%;" data-progress="90%"></span>
+          <span style="width: 80%;" data-progress="80%"></span>
         </div>
       </div>
       <div class="prog-holder">
@@ -428,5 +428,6 @@
   </div>
  </div>
  <!-- End Footer -->
+ <!-- The End -->
 </body>
 </html>
